<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Liquid Settings</string>
    <string name="version_name">ICS alpha v.001</string>
    <string name="application_title">Application</string>
    <string name="application_summary">Manage &amp; configure</string>
    <string name="app_manage">Manage</string>
    <string name="pref_install_location_title">Install Location</string>
    <string name="pref_install_location_summary">App install location</string>
    <string name="pref_switch_storage_title">Internal Storage</string>
    <string name="pref_switch_storage_summary_on">Expanded internal storage</string>
    <string name="pref_switch_storage_summary_off">Removable sdcard storage</string>
    <string name="pref_storage_switch_unavailable">Device is not supported</string>
    <string name="pref_move_all_apps_title">Move External</string>
    <string name="pref_move_all_apps_summary">Move apps externally</string>
    <string name="system_removal_title">Remove Apps</string>
    <string name="system_removal_summary">Remove system apps</string>
    <string name="system_removal_dialog_title">Removal Options</string>
    <string name="perm_enable_managment">Permissions</string>
    <string name="perm_enable_managment_summary">Allow permission revoking</string>
    <string name="perm_enable_warning_message">Warning!\nRevoking most permissions will most likely cause apps to malfunction. If an app with revoked permissions force-closes please grant the expected permissions or don\'t use the app.</string>
    <string name="haptic_title">Haptic Feedback</string>
    <string name="haptic_summary">Adjust feedback strength</string>
    <string name="haptic_feedback_title">Haptic Feedback</string>
    <string name="summary_on_haptic_feedback">Use haptic feedback on keypress for softkeys and certain UI interactions</string>
    <string name="summary_off_haptic_feedback">No haptic feedback on keypress for softkeys and certain UI interactions</string>
    <string name="title_haptic_feedback_up">Haptic Feedback Up</string>
    <string name="summary_on_haptic_feedback_up">Use haptic feedback on key release for softkeys and certain UI interactions</string>
    <string name="summary_off_haptic_feedback_up">No haptic feedback on key release for softkeys and certain UI interactions</string>
    <string name="title_haptic_feedback_all">Haptic Screen Items</string>
    <string name="summary_on_haptic_feedback_all">Use haptic feedback when making screen selections</string>
    <string name="summary_off_haptic_feedback_all">No haptic feedback when making screen selections</string>
    <string name="title_haptic_down_decider">Set Down Pattern</string>
    <string name="title_haptic_up_decider">Set Up Pattern</string>
    <string name="title_haptic_long_decider">Set Long-Press Pattern</string>
    <string name="title_haptic_tap_decider">Set Keypad Tap Pattern</string>
    <string name="general_title">General</string>
    <string name="title_general_display">Display</string>
    <string name="title_general_system">System</string>
    <string name="rotation_category_title">Rotation</string>
    <string name="pref_rotation_0_title">0 Degrees</string>
    <string name="pref_rotation_90_title">90 Degrees</string>
    <string name="pref_rotation_180_title">180 Degrees</string>
    <string name="pref_rotation_270_title">270 Degrees</string>
    <string name="pref_electron_beam_animation_on">Screen-On Animation</string>
    <string name="pref_electron_beam_animation_off">Screen-Off Animation</string>
    <string name="title_general_display_adb_usb_debugging_notif">USB Debugging Icon</string>
    <string name="summary_on_general_display_adb_usb_debugging_notif">Debugging icon visible</string>
    <string name="summary_off_general_display_adb_usb_debugging_notif">Debugging icon not visible</string>
    <string name="spare_title_haptic_feedback">Haptic Feedback</string>
    <string name="spare_summary_on_haptic_feedback">Vibration with user interaction</string>
    <string name="spare_summary_off_haptic_feedback">No vibration with user interaction</string>
    <string name="title_kill_app_longpress_back">Long-Press Back</string>
    <string name="summary_on_kill_app_longpress_back">Requests user to kill app</string>
    <string name="summary_off_kill_app_longpress_back">Ignores request to kill app</string>
    <string name="backlight_title">Automatic Backlight</string>
    <string name="backlight_summary">Light levels and filters</string>
    <string name="lock_custom_app_title">Lock Activities</string>
    <string name="lock_custom_app_summary">Prevents activites from closing</string>
    <string name="dialog_color_trackball">Choose Color</string>
    <string name="dialog_blink_trackball">Choose Blink Rate</string>
    <string name="color_trackball_flash_title">Flash Color</string>
    <string name="color_trackball_flash_summary">Color to flash</string>
    <string name="color_trackball_custom_title">Custom Color</string>
    <string name="color_trackball_custom_summary">Custom color to flash</string>
    <string name="color_trackball_blink_title">Blink Rate</string>
    <string name="color_trackball_blink_summary">Custom blink rate</string>
    <string name="color_trackball_test_title">Flash Test</string>
    <string name="color_trackball_test_summary">Test the flash</string>
    <string name="trackball_category_list_title">Category</string>
    <string name="trackball_category_list_summary">Choose Category</string>
    <string name="trackball_color_notice_title">NOTE:</string>
    <string name="trackball_color_notice_summary">Some colors only display on certain devices</string>
    <string name="trackball_app_save_title">Save</string>
    <string name="trackball_app_save_summary">Save Settings</string>
    <string name="trackball_app_reset_title">Reset</string>
    <string name="trackball_app_reset_summary">Remove Settings</string>
    <string name="trackball_force_mode_title">LED Mode</string>
    <string name="trackball_force_mode_dialog">Please select mode</string>
    <string name="trackball_force_mode_summary">Configure the behavior</string>
    <string name="pref_vm_heapsize_title">VM Heapsize</string>
    <string name="pref_vm_heapsize_summary">Max virtual memory size</string>
    <string name="pref_lcd_density_title">LCD Density</string>
    <string name="pref_lcd_density_summary">Change the screen density</string>
    <string name="pref_max_events_title">Max Events</string>
    <string name="pref_max_events_summary">Controls max window events</string>
    <string name="pref_ring_delay_title">Ring Delay</string>
    <string name="pref_ring_delay_summary">Sets incoming ringer delay</string>
    <string name="pref_fast_upload_title">Fast Upload</string>
    <string name="pref_fast_upload_summary">Makes upload speeds faster</string>
    <string name="pref_prox_delay_title">Proximity Delay</string>
    <string name="pref_prox_delay_summary">Sensor delay during calls</string>
    <string name="pref_rem_logcat_title">Remove Logcat</string>
    <string name="pref_rem_logcat_summaryOn">Enable logcat on boot</string>
    <string name="pref_rem_logcat_summaryOff">Disable logcat on boot</string>
    <string name="pref_wifi_interval_title">Wifi Interval</string>
    <string name="pref_wifi_interval_summary">Time between wifi scans</string>
    <string name="pref_sleep_title">Sleep Mode</string>
    <string name="pref_sleep_summary">Modify night sleep policy</string>
    <string name="pref_tcp_stack_title">TCP Stack</string>
    <string name="pref_tcp_stack_summary">Optimizes data preformance</string>
    <string name="pref_check_in_title">Check Service</string>
    <string name="pref_check_in_summary">Stop sending usage data</string>
    <string name="pref_sd_speed_title">SDCard Booster</string>
    <string name="pref_sd_speed_summary">Modify read ahead buffer</string>
    <string name="propviewer_title">PropViewer</string>
    <string name="propviewer_summary">Display build prop values</string>
    <string name="title_window_animations">Window Animations</string>
    <string name="summary_window_animations">Speed of window animations</string>
    <string name="dialog_title_window_animations">Select Window Speed</string>
    <string name="title_transition_animations">Transition Animations</string>
    <string name="summary_transition_animations">Speed between transitions</string>
    <string name="dialog_title_transition_animations">Transition Speed</string>
    <string name="title_fancy_ime_animations">Fancy Input Animations</string>
    <string name="summary_on_fancy_ime_animations">Use fancier animations</string>
    <string name="summary_off_fancy_ime_animations">Use normal animations</string>
    <string name="haptic_feedback_summary_on">Vibrate with interaction</string>
    <string name="haptic_feedback_summary_off">No Vibrate with interaction</string>
    <string name="title_font_size">Font Size</string>
    <string name="summary_font_size">Change font display size</string>
    <string name="dialog_title_font_size">Select Font Size</string>
    <string name="title_end_button">End Button Behavior</string>
    <string name="summary_end_button">Select end button action</string>
    <string name="dialog_title_end_button">Select End Button</string>
    <string name="compatibility_mode_title">Compatibility</string>
    <string name="compatibility_mode_summary_on">Run apps (compatibility)</string>
    <string name="compatibility_mode_summary_off">Run apps (normal mode)</string>
    <string name="camera_title">Camera</string>
    <string name="sound_notifications_focus_title">Notification Focus</string>
    <string name="sound_notifications_focus_summary">Adjusts volume when focus</string>
    <string name="sound_volume_control_silent_title">Silent State</string>
    <string name="sound_volume_control_silent_summary">State of silence option</string>
    <string name="sound_vibrate_in_call_title">Call Notification</string>
    <string name="sound_vibrate_in_call_summary_off">Vibrate disabled during call</string>
    <string name="sound_vibrate_in_call_summary_on">Vibrate enabled during call</string>
    <string name="sound_default_volume_media_title">Volume Control</string>
    <string name="sound_default_volume_media_summary">Make default media volume control</string>
    <string name="sound_lock_volume_keys_title">Lock Volume Keys</string>
    <string name="sound_lock_volume_keys_summary">Disables volume keys when silent</string>
    <string name="sound_to_speaker_title">Always Use Speaker</string>
    <string name="sound_notifications_title">Notifications</string>
    <string name="sound_rings_title">Ringtones</string>
    <string name="sound_alarms_title">Alarms</string>
    <string name="sound_note_title">Note</string>
    <string name="sound_note_summary">Headphones</string>
    <string name="sound_attenuation_title">Volume</string>
    <string name="sound_limitvol_title">Volume when playing sound</string>
    <string name="sound_notifications_attenuation_dialog">Notifications</string>
    <string name="sound_rings_attenuation_dialog">Ringtones</string>
    <string name="sound_alarms_attenuation_dialog">Alarms</string>
    <string name="sound_notifications_limitvol_dialog">Notifications</string>
    <string name="sound_rings_limitvol_dialog">Ringtones</string>
    <string name="sound_alarms_limitvol_dialog">Alarms</string>
    <string name="sound_swap_volume_keys_dialog">Swap Volume Keys</string>
    <string name="sound_swap_volume_keys_title">Swap Volume Keys</string>
    <string name="sound_camera_shutter_disable_title">Camera Shutter</string>
    <string name="sound_camera_shutter_disable_summary_on">Shutter sound is enabled</string>
    <string name="sound_camera_shutter_disable_summary_off">Shutter sound is disabled</string>
    <string name="sound_category_quiet_hours_title">Quiet Hours</string>
</resources>