<?xml version="1.0" encoding="utf-8"?>
<!-- 
 * Copyright (C) 2011 The Liquid Settings Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
            
    <!-- Spare Parts -->
    <PreferenceCategory android:key="general_category"
        android:title="@string/general_title">
        
        <ListPreference android:key="window_animations"
            android:title="@string/title_window_animations"
            android:summary="@string/summary_window_animations"
            android:entries="@array/entries_animations"
            android:entryValues="@array/entryvalues_animations"
            android:dialogTitle="@string/dialog_title_window_animations" />
                
        <ListPreference android:key="transition_animations"
            android:title="@string/title_transition_animations"
            android:summary="@string/summary_transition_animations"
            android:entries="@array/entries_animations"
            android:entryValues="@array/entryvalues_animations"
            android:dialogTitle="@string/dialog_title_transition_animations" />
        
        <CheckBoxPreference android:key="fancy_ime_animations"
            android:title="@string/title_fancy_ime_animations"
            android:summaryOn="@string/summary_on_fancy_ime_animations"
            android:summaryOff="@string/summary_off_fancy_ime_animations"/>
        
        <ListPreference android:key="font_size"
            android:title="@string/title_font_size"
            android:summary="@string/summary_font_size"
            android:entries="@array/entries_font_size"
            android:entryValues="@array/entryvalues_font_size"
            android:dialogTitle="@string/dialog_title_font_size" />
        
        <ListPreference android:key="end_button"
            android:title="@string/title_end_button"
            android:summary="@string/summary_end_button"
            android:entries="@array/entries_end_button"
            android:entryValues="@array/entryvalues_end_button"
            android:dialogTitle="@string/dialog_title_end_button" />
        
        <CheckBoxPreference android:key="haptic_feedback"
            android:title="@string/haptic_feedback_title"
            android:summaryOn="@string/haptic_feedback_summary_on"
            android:summaryOff="@string/haptic_feedback_summary_off"/>
        
        <CheckBoxPreference android:key="compatibility_mode"
            android:title="@string/compatibility_mode_title"
            android:summaryOn="@string/compatibility_mode_summary_on"
            android:summaryOff="@string/compatibility_mode_summary_off" />
    </PreferenceCategory>
</PreferenceScreen>
