<?xml version="1.0" encoding="utf-8"?>
<!-- 
 * Copyright (C) 2011 The Liquid Settings Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/haptic_title"
    android:summary="@string/haptic_summary">

    <!-- Haptic Feedback -->
    <CheckBoxPreference android:key="haptic_feedback"
		android:title="@string/haptic_feedback_title"
		android:summaryOn="@string/summary_on_haptic_feedback"
		android:summaryOff="@string/summary_off_haptic_feedback"/>

	<CheckBoxPreference android:key="haptic_feedback_up"
		android:title="@string/title_haptic_feedback_up"
		android:summaryOn="@string/summary_on_haptic_feedback_up"
		android:summaryOff="@string/summary_off_haptic_feedback_up"
		android:defaultValue="false" />

	<CheckBoxPreference android:key="haptic_feedback_all"
		android:title="@string/title_haptic_feedback_all"
		android:summaryOn="@string/summary_on_haptic_feedback_all"
		android:summaryOff="@string/summary_off_haptic_feedback_all"
		android:defaultValue="false" />

	<Preference android:key="haptic_down_decider"
		android:title="@string/title_haptic_down_decider"
		android:defaultValue="1" />

	<Preference android:key="haptic_up_decider"
		android:title="@string/title_haptic_up_decider"
		android:defaultValue="2" />

	<Preference android:key="haptic_long_decider"
		android:title="@string/title_haptic_long_decider"
		android:defaultValue="3" />

	<Preference android:key="haptic_tap_decider"
		android:title="@string/title_haptic_tap_decider"
		android:defaultValue="4" />
</PreferenceScreen>
